fix table overflow

--- a/themes/lite/source/css/main.styl
+++ b/themes/lite/source/css/main.styl
@@ -45,6 +45,7 @@ table {
     margin-bottom: $elmarginbtm;
     border-collapse: collapse;
     border-spacing: 0;
+    word-break: break-all;
     width: 100%;
     thead {
         height: 2.125em;
